- Erros de português no comando `/ship`
- O valor de lucro da roleta foi ajustado para todas apostas que duplicava o valor real.
- Erros do RPG: Muitos erros aconteciam como 'Cannot read [0] of undefined'. Isso foi resolvido com um novo sistema de interações que, eu creio, que vão arrumar o problema, que era causado por lags entre a Menhera e o Discord

### Removed

- Colocação do usuário no top ao caçar

## [4.0.H-BETA] - 2022-03-01

### Added

- Os comandos do RPG agora tem um botão extra para terminar o comando na hora para não ter que esperar o tempo de execução para utilizar outro comando
- Adicionado a **Biblioteca de Boleham** dentro do comando `/centro`. Lá é possível acessar as enciclopédias do mundo para ter informações sobre objetos do RPG. Atualmente é possivel ver informações das habildiades lá. Você pode pesquisar habilidades por ID ou mesmo pelo **NOME** delas.

### Fixed

- Ao fugir da Dungeon, você recebe o cooldown da Dungeon
- O botão vender tudo no centro ta funcionando
- O botão pegar todos os itens na dungeon ta funcinoando

## [4.0.G-BETA] - 2022-02-28

### Added

- Usuários podem tentar fugir de uma batalha a qualquer momento.
- Adicionado a opção de selecionar todos itens no final da batalha da dungeon e ao vender os loots no centro

### Changed

- O tempo de morte foi aumentado em `Tempo da Igreja + 1 hora`
- O tempo de resposta de batalha foi aumentado de `12` para `15` segundos

### Fixed

- Arrumado problema da API ficar caindo por conta do jogo do bihco.
- Creio que MUITOS bugs podem ter sido resolvidos pois percebi que um sistema no comando de Dungeon estava pegando o usuário antes da batalha para fazer os cálculos.
- A cura de efeitos de habilidades settava a vida ao invés de somar.

## [4.0.F-BETA] - 2022-02-21

### Added

- Ao upar uma habilidade, agora aparece o novo custo dela

### Fixed

- O dano das habilidades está sendo arredondado
- Usuários param de batalhar ao morrer